clusters/homelab/apps/ext-galabau/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: galabau
  namespace: ext-galabau
spec:
  selector:
    app: fewo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: galabau-monitoring
  namespace: ext-galabau
spec:
  selector:
    app: galabau
  ports:
    - name: http-metrics
      protocol: TCP
      port: 2000
      targetPort: 2000
  type: ClusterIP
